[package]
name = "raytracer"
version = "0.1.0"
authors = ["heydabop <heydabop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
rand = "0.7"
rand_pcg = "0.2.1"
